--- a/ReportLibrary/Horizon/Horizon.resx
+++ b/ReportLibrary/Horizon/Horizon.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SqlDataSource1.SelectCommand" xml:space="preserve">
+  <data name="SqlDataSourceHorizon.SelectCommand" xml:space="preserve">
     <value>SELECT        hash AS protect_layer_hash, scope AS protect_layer_scope, object_id AS protect_layer_ID, protect_layer_name, object_description AS protect_layer_description, type AS protect_layer_type, 
                          lopa_reference AS protect_layer_lopa_reference, sil_target AS protect_layer_sil_target, rrf_target AS protect_layer_rrf_target, mttfs_target AS protect_layer_mttfs_target, sil_achieved AS protect_layer_sil_achieved, 
                          rrf_achieved AS protect_layer_rrf_achieved, mttfs_achieved AS protect_layer_mttfs_achieved, process_safety_time AS protect_layer_process_safety_time, time_safe_state AS protect_layer_time_safe_state, 
