--- a/ReportLibrary/Horizon/Horizon1.resx
+++ b/ReportLibrary/Horizon/Horizon1.resx
@@ -117,13 +117,30 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SqlDataSource1.SelectCommand" xml:space="preserve">
-    <value>SELECT        dat_protect_layer.hash AS protect_layer_hash, dat_protect_layer.scope AS protect_layer_scope, dat_protect_layer.object_id AS protect_layer_ID, PL_to_Inputs.type_id AS pl_to_inputs_type_id, 
-                         PL_to_Inputs.field_id AS pl_to_inputs_field_id, PL_to_Inputs.subfield_id AS pl_to_inputs_subfield_id, PL_to_Inputs.relation_hash AS pl_to_inputs_type_relation_hash, dat_input.hash AS input_hash, 
-                         dat_input.object_id AS input_object_id, dat_input.input_name, dat_input.input_voting, dat_input.time_delay, dat_input.trip_setpoint, dat_input.alarm_setpoint, dat_input.input_range, dat_input.deviation_alarm
-FROM            dat_protect_layer LEFT OUTER JOIN
-                         object_relational_matrix_values AS PL_to_Inputs ON dat_protect_layer.hash = PL_to_Inputs.hash INNER JOIN
-                         dat_input ON PL_to_Inputs.relation_hash = dat_input.hash
-WHERE        (PL_to_Inputs.subfield_id = 'inputs')</value>
+  <data name="SqlDataSourceHorizon1.SelectCommand" xml:space="preserve">
+    <value>SELECT
+  dat_protect_layer.hash AS protect_layer_hash
+ ,dat_protect_layer.scope AS protect_layer_scope
+ ,dat_protect_layer.object_id AS protect_layer_ID
+ ,PL_to_Inputs.type_id AS pl_to_inputs_type_id
+ ,PL_to_Inputs.field_id AS pl_to_inputs_field_id
+ ,PL_to_Inputs.subfield_id AS pl_to_inputs_subfield_id
+ ,PL_to_Inputs.relation_hash AS pl_to_inputs_type_relation_hash
+ ,dat_input.hash AS input_hash
+ ,dat_input.object_id AS input_object_id
+ ,dat_input.input_name AS input_name
+ ,dat_input.input_voting
+ ,dat_input.time_delay
+ ,dat_input.trip_setpoint
+ ,dat_input.alarm_setpoint
+ ,dat_input.input_range
+ ,dat_input.deviation_alarm
+FROM dbo.dat_protect_layer
+LEFT OUTER JOIN dbo.object_relational_matrix_values PL_to_Inputs
+  ON dat_protect_layer.hash = PL_to_Inputs.hash
+INNER JOIN dbo.dat_input
+  ON PL_to_Inputs.relation_hash = dat_input.hash
+WHERE dat_protect_layer.hash = @PLID
+AND PL_to_Inputs.subfield_id = 'inputs'</value>
   </data>
 </root>
